# ttobak

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  MANIFEST.in  Makefile  NOTICE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  corpus_pair.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
assets/brand/: README.md
assets/pictograms/mulberry/: ATTRIBUTION.md
assets/pictograms/openmoji/: ATTRIBUTION.md
corpus/: DATASET_CARD.md  DATA_LICENSE  NOTICE-sources.md  SOURCES.csv  pairs.jsonl
docs/: providers.md
docs/contest/: 2026-개발계획서-또박.md
docs/superpowers/plans/: 2026-06-30-ttobak-mvp.md
scripts/: check_assets_separation.py  check_licenses.py
tests/: test_assets_separation.py  test_ci_workflow.py  test_common.py  test_ir.py  test_levels.py  test_license_allowlist.py  test_licensing_files.py  test_parse_dispatch.py  test_parse_roundtrip.py  test_pipeline.py  test_pipeline_e2e.py  test_pipeline_integration.py  test_pipeline_prompts.py  test_pipeline_simplify.py  test_prompts.py  test_result.py  test_smoke.py  test_text_parser.py
tests/eval/: conftest.py  test_corpus_dir.py  test_corpus_schema.py  test_distortion_bench.py  test_distortion_bench_real_gate.py  test_distortion_generator.py  test_distortion_models.py  test_eval_integration.py  test_ker_eval.py  test_scaffold.py
tests/fidelity/: test_boundary.py  test_extract.py  test_gate_adversarial.py  test_models.py  test_negation_guard.py  test_normalize_date.py  test_normalize_number.py  test_router.py  test_verify.py  test_verify_slots.py
tests/fixtures/: notice_health_insurance.txt
tests/metric/: test_models.py  test_rules.py  test_score.py  test_tokenize.py  test_tokenize_live.py
tests/parse/: conftest.py  test_fixtures.py  test_hwp_parser.py  test_parse_dispatch_m8.py  test_pdf_parser.py
tests/pictogram/: test_lexicon.py  test_match.py
tests/providers/: test_anthropic_provider.py  test_base.py  test_factory.py  test_fake.py  test_ollama_provider.py
tests/render/: test_render_html.py  test_template_file.py
tests/tooling/: test_assets_separation.py  test_ci_wiring.py  test_cli_audit.py  test_license_allowlist.py  test_module_smoke.py  test_notice_coverage.py  test_run_audit.py  test_secrets_scan.py
tests/web/: __init__.py  test_build_app.py  test_cli.py  test_handler.py  test_helpers.py  test_integration.py  test_provider.py
tooling/: annotate_corpus.py  check_licenses.py
ttobak/: __init__.py  cli.py  common.py  ir.py  levels.py  pipeline.py  prompts.py  render.py  result.py
ttobak/data/: __init__.py  easy_words.txt  hard_terms.txt  idioms.txt
ttobak/eval/: __init__.py  corpus.py  distortion_bench.py  ker_eval.py
ttobak/fidelity/: __init__.py  extract.py  models.py  negation_guard.py  normalize.py  router.py  verify_slots.py
ttobak/metric/: __init__.py  models.py  rules.py  tokenize.py
ttobak/parse/: __init__.py  _fixtures.py  hwp_parser.py  pdf_parser.py  text_parser.py
ttobak/pictogram/: __init__.py  lexicon.py  models.py
ttobak/providers/: __init__.py  anthropic_provider.py  base.py  fake.py  ollama_provider.py
ttobak/templates/: result.html.j2
ttobak/web/: __init__.py  app.py  provider.py
(+3 files in other folders)
