[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttobak"
version = "0.1.0"
description = "Open-source Korean Easy-Read engine: measures easiness (K-ER) and preserves facts via a fidelity gate."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ttobak contributors" }]
keywords = ["korean", "easy-read", "accessibility", "readability", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Korean",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pydantic>=2.6,<3",
    "kiwipiepy>=0.17,<0.21",
    "pypdf>=4.0,<6",
    "pdfminer.six>=20231228",
    "hwp-hwpx-parser==1.0.0",
    "dateparser>=1.2,<2",
    "jinja2>=3.1,<4",
    "gradio>=4.44,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pip-licenses>=5.0,<6",
    "ruff>=0.5",
]
anthropic = ["anthropic>=0.40"]
ollama = ["ollama>=0.4"]
audit = ["pip-licenses>=5,<6"]

[project.scripts]
ttobak = "ttobak.cli:main"

[project.urls]
Homepage = "https://github.com/needsbuilder/ttobak"

[tool.setuptools.packages.find]
where = ["."]
include = ["ttobak*", "tooling*"]

[tool.setuptools.package-data]
ttobak = ["templates/*.j2", "data/*.txt"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# 최소 정적 게이트: F(pyflakes — 미사용/미정의 이름), E9(구문 오류).
# 스타일 규칙은 의도적으로 제외 (게이트는 결함 탐지용, 취향 강제용 아님).
select = ["F", "E9"]
